[package]
name = "godot-articy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

articy = { git = "https://github.com/bram-dingelstad/articy-rs.git", package = "articy" }
gdnative = "0.11.2"
serde = "1.0.152"
serde_json = "1.0.93"

[lib]
name = "godot_articy"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]
